--- a/frontend/src/components/community/Community.css
+++ b/frontend/src/components/community/Community.css
@@ -99,6 +99,6 @@
 @media(max-width: 400px){
     .community__img{
         max-width: 150px;
-        max-height: auto;
+        max-height: 50%;
     }
 }
