--- a/frontend/src/components/community/Community.css
+++ b/frontend/src/components/community/Community.css
@@ -93,7 +93,7 @@
         margin-bottom: 30px;
     }
     .community__icon{
-        max-width: 70px;
+        max-width: 40%;
     }
 }
 @media(max-width: 400px){
